# BioInformatics

./: Extension_Publish_Guide.md  README.md  assignment_report.md  blast_pairwise.sh  blast_pairwise_results.txt  dirname.txt  filenames.txt  index.md  list_contents.sh  report.md  run_blast_pairwise.py  shuffled_seqs.fasta
CellAgent/: .gitignore  README.md  pyproject.toml
CellAgent/cellagent/: __init__.py  config.py  llm.py
CellAgent/cellagent/agent/: __init__.py  cell_agent.py  executor.py
CellAgent/cellagent/retriever/: resource_retriever.py
CellAgent/cellagent/tools/: annotation.py  clustering.py  differential.py  gene_analysis.py  integration.py  preprocessing.py  trajectory.py  visualization.py
CellAgent/tests/: test_components.py
ObliqueSliceResampler/: ObliqueSliceResampler.py  README.md
SlicerSurfaceNormalSlicer/: CMakeLists.txt  README.md  SurfaceNormalSlicer.json
SlicerSurfaceNormalSlicer/SurfaceNormalSlicer/: CMakeLists.txt
SurfaceNormalSlicer/: README.md  SurfaceNormalSlicer.py
bash_homework/: mapping_homework.md
bash_homework/actb_analysis/: ACTB_analysis_homework.md  ACTB_introns.bed  COAD.ACTB.bedgraph  extract_introns.py
shuffled_seqs/: seq_01.fasta  seq_02.fasta  seq_03.fasta  seq_04.fasta  seq_05.fasta  seq_06.fasta  seq_07.fasta  seq_08.fasta  seq_09.fasta  seq_10.fasta
